// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides image when no url and password when no password 1`] = `
<KeyboardFriendlyView>
  <ScrollView
    keyboardDismissMode="on-drag"
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <Text>
        Everything looking good?
      </Text>
      <Text>
        You can always come back and change your details at any time.
      </Text>
    </View>
    <View>
      <SettingControl
        label="Your Full Name"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        toggleEditable={true}
        value="Hill"
      />
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        keyboardType="email-address"
        label="Email Address"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        toggleEditable={true}
        value="jill@hill.com"
      />
      <SettingControl
        label="Where do you call home"
        onFocus={[Function]}
        toggleEditable={true}
        value="hill"
      />
    </View>
  </ScrollView>
  <View>
    <Button
      onPress={[Function]}
      text="< Back"
    />
    <Button
      onPress={[Function]}
      text="Finish"
    />
  </View>
</KeyboardFriendlyView>
`;

exports[`matches last snapshot 1`] = `
<KeyboardFriendlyView>
  <ScrollView
    keyboardDismissMode="on-drag"
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <Text>
        Everything looking good?
      </Text>
      <Text>
        You can always come back and change your details at any time.
      </Text>
    </View>
    <View>
      <View>
        <TouchableOpacity>
          <Image
            source={
              Object {
                "uri": "mill.png",
              }
            }
          />
        </TouchableOpacity>
      </View>
      <SettingControl
        label="Your Full Name"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        toggleEditable={true}
        value="Hill"
      />
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        keyboardType="email-address"
        label="Email Address"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        toggleEditable={true}
        value="jill@hill.com"
      />
      <SettingControl
        label="Where do you call home"
        onFocus={[Function]}
        toggleEditable={true}
        value="hill"
      />
    </View>
  </ScrollView>
  <View>
    <Button
      onPress={[Function]}
      text="< Back"
    />
    <Button
      onPress={[Function]}
      text="Finish"
    />
  </View>
</KeyboardFriendlyView>
`;

exports[`validate returns false and populates state when the props are bad 1`] = `
Object {
  "confirmPassword": "Passwords must match",
  "email": "Must be a valid email",
  "name": "Name must not consist solely of whitespace.",
  "password": "Password must be at least 9 characters.",
}
`;

exports[`validate returns true when the props are good 1`] = `
Object {
  "confirmPassword": false,
  "email": false,
  "name": null,
  "password": null,
}
`;
